@@ -178,10 +178,10 @@ manmode:
 			string(".SH COMMANDS REFERENCE\n")+
 			string("\n")+
 			get_commands_reference(refmode)+
-			/*
 			string(".SH KEYSYMS REFERENCE\n")+
 			string("\n")+
-			do_dump_key_codes( Man )+ */
+			do_dump_key_codes( Man )+
+			string("\n")+
 			string(".SH AUTOCOMMANDS REFERENCE\n"
 			"Available autocommands are: "
 			FIM_AUTOCOMMANDS_LIST
